feat: 채팅방 정보 조회 기능 추가